--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     grid-template-columns: repeat(2, 50%);
     padding-top: 80px;
     padding-left: 80px;
+    margin-left: 5%;
 }
 
 .head-part h2 {
@@ -20,6 +21,7 @@
     width: 50%;
     display: grid;
     grid-template-columns: repeat(6, auto);
+    margin-top: 30px;
 }
 
 .head-nav a {
